--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -62,6 +62,11 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+
+    configurations {
+      all*.exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk7'
+      all*.exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk8'
+    }
 }
 
 flutter {
