--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "autocorrect",
     "AUTOINCREMENT",
     "sqflite"
-  ]
+  ],
+  "cmake.sourceDirectory": "C:/vs_projects/myflutterapp/build/windows/extracted/firebase_cpp_sdk"
 }
