--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,12 @@
 {
 	"java.configuration.updateBuildConfiguration": "automatic",
 	"cSpell.words": [
-		"ARGB",
-		"autocorrect",
-		"AUTOINCREMENT",
-		"Registeratering",
-		"sqflite"
-	],
+    "ARGB",
+    "autocorrect",
+    "autofocus",
+    "AUTOINCREMENT",
+    "Registeratering",
+    "sqflite"
+  ],
 	"cmake.sourceDirectory": "C:/vs_projects/myflutterapp/linux"
 }
